--- a/Part2/ex10/frontend/Dockerfile
+++ b/Part2/ex10/frontend/Dockerfile
@@ -6,6 +6,6 @@ RUN apt update && apt install -y curl && curl -sL https://deb.nodesource.com/set
 RUN node -v && npm -v
 
 RUN cd frontend-example-docker && npm install
-ENV API_URL=http://localhost:8000
+# ENV API_URL=http://localhost:8000
 
 CMD cd frontend-example-docker && npm start
