--- a/Part1/ex17/Dockerfile
+++ b/Part1/ex17/Dockerfile
@@ -1,3 +1,12 @@
-FROM ubuntu:18.04
-RUN apt-get update && apt-get install -y curl
-CMD echo "Input website:"; read website; echo "Searching.."; sleep 1; curl http://$website;
+FROM alpine
+LABEL maintainer="emaitux"
+
+ENV PYTHONUNBUFFERED=1
+
+RUN apk add --update --no-cache python3 && ln -sf python3 /usr/bin/python
+RUN python3 -m ensurepip
+RUN pip3 install --no-cache --upgrade pip setuptools
+
+WORKDIR /project
+
+CMD pip3 install -r requirement.txt && python3 main.py
